<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/header"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/today_button"
            android:layout_width="120dp"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@color/color_primary"
            android:text="@string/TodayButton" />
    </LinearLayout>

    <CalendarView
        android:id="@+id/MonthCalendar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:firstDayOfWeek="2"/>

</LinearLayout>